apps/home/media/seafile/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: media
spec:
  template:
    spec:
      containers:
        - name: seafile
          volumeMounts:
            - name: seafile-data
              mountPath: /shared

        - name: mariadb
          volumeMounts:
            - name: seafile-mariadb
              mountPath: /var/lib/mysql

      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data-pvc
        - name: seafile-mariadb
          persistentVolumeClaim:
            claimName: seafile-mariadb-pvc
